package creational.abstractfactory;

// Abstract factory interface
public abstract class AbstractFactory {
    public abstract Product getProduct(String type);
}