package creational.abstractfactory;

// Interface for all products
public interface Product {
    String getName();
    double getPrice();
}