package structural.adapter;

public interface NewPrinter {
    void print(String text);
}