package structural.adapter;

public class OldPrinter {
    public void printOld(String text) {
        System.out.println("[OLD PRINTER OUTPUT]");
        System.out.println(text);
    }
}