package structural.bridge;

// Implementation interface
public interface PaymentSystem {
    void processPayment(String method, double amount);
}